# program_template

./: LICENSE  README.md
templates/cmake/: cookiecutter.json
templates/cmake/hooks/: post_gen_project.py
templates/cmake/{{cookiecutter.project_slug}}/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
templates/cmake/{{cookiecutter.project_slug}}/cmake/: Config.cmake.in
templates/cmake/{{cookiecutter.project_slug}}/docs/: Doxyfile.in
templates/cmake/{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: lib.hpp
templates/cmake/{{cookiecutter.project_slug}}/src/: lib.cpp  main.cpp
templates/cmake/{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  test_main.cpp
templates/go/: cookiecutter.json
templates/go/hooks/: post_gen_project.py
templates/go/{{cookiecutter.project_slug}}/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  go.mod  {{cookiecutter.project_slug}}.service
templates/go/{{cookiecutter.project_slug}}/cmd/{{cookiecutter.project_slug}}/: main.go
templates/go/{{cookiecutter.project_slug}}/configs/: config.yaml
templates/go/{{cookiecutter.project_slug}}/internal/app/: app.go
templates/go/{{cookiecutter.project_slug}}/internal/config/: config.go  config_test.go
templates/go/{{cookiecutter.project_slug}}/internal/version/: version.go
templates/go/{{cookiecutter.project_slug}}/tests/: integration_test.go
